web/wp-content/themes/lfevents/src/assets/scss/components/_forms.scss
div.hs_recaptcha,
.grecaptcha-badge {
  display: none;
}

.hbspt-form .hs-form {
  display: flex;
  flex-direction: column;
  max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1rem;

  input {
    margin-top: 0.4rem;
    margin-bottom: 0;
  }

  @media (min-width: 700px) {
    flex-direction: row;
    justify-content: center;

    > *:not(:last-child) {
      margin-right: 10px;
    }

    input {
      margin-top: 0;
    }
  }

  .button,
  .hs-button {
    background-color: transparent;
    border: 1px solid $white;
    padding: 0.5em 1em;
    box-shadow: none;
    border-radius: 0.5rem;
    height: 2.4375rem;
    color: white;
    font-size: 0.9rem;
    white-space: nowrap;
    cursor: pointer;

    &:active {
      position: relative;
      top: 1px;
    }

    &:hover {
      background-color: rgba(#000000, 0.1);
    }

    @media (max-width: 700px) {
      width: 100%;
    }
  }

  .hs_error_rollup {
    display: none;
  }

  .hs-error-msgs {
    list-style-type: none;
    margin-bottom: 0.6rem;
    margin-left: 0;
    text-align: left;

    @media (min-width: 700px) {
      margin-bottom: 0;
    }
  }

  .hs-error-msg {
    color: white;
    font-style: italic;
    font-size: 0.725em;
    display: block;
    margin-right: 8px;
  }
}

.hbspt-form .submitted-message {
  padding: 0.8em;
  max-width: 900px;
  margin: 1rem auto;
  text-align: center;
  font-weight: 600;
  border: 2px solid white;

  p {
    margin-bottom: 0;
    color: white;
  }
}

.hbspt-form .hs-form-field > label {
  clip: rect(1px, 1px, 1px, 1px);
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
}

